<resources>
    <string name="app_name">PARKKIT</string>

    <!--play store-->
    <string name="app_google_play_store_link" translatable="false">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link" translatable="false">"market://details?id="</string>
    <string name="google_maps_api_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDhJ6zv58RbHyj-E7yH8j7TS1V6z2oX0WU</string>

    <string name="locationUserTitle">Buradayım</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="offline">Şu an ÇEVRİMDIŞISIN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="online">Şu an ÇEVRİMİÇİSİN</string>

    <string name="gpsmessage">GPS Kapalı. Açmak İstermisin?</string>
    <string name="gpsOK">GPS AÇ</string>

    <string name="datanotfoundmessage">İstasyon Bulunamadı</string>
    <string name="datanotfoundOK">Anasayfaya Git</string>
    <string name="bank_atm_title">ATM BANKA</string>
    <string name="car_service_title">OTO SERVIS</string>
    <string name="car_wash_title">OTO YIKAMA</string>
    <string name="gas_station_title">AKARYAKIT</string>
    <string name="parkkit_title">PARKKIT</string>
    <string name="akaryakit_home_title">AKARYAKIT</string>
    <string name="atm_banka_home_title">ATM-BANKA</string>
    <string name="otopark_home_title">OTOPARK</string>
    <string name="oto_yikama_home_title">OTO YIKAMA</string>
    <string name="oto_service_home_title">OTO SERVİS</string>
    <string name="parking_title">OTOPARK</string>
    <string name="menu_title">PARKKIT</string>
    <string name="menu_version">Versiyon 1.0.1</string>

    <string name="warning_gps">UYARI</string>
    <string name="message_gps">Lütfen konumunuzun açık olduğundan emin olunuz...</string>

    <string name="menu_home">ANASAYFA</string>
    <string name="menu_contact">BİZE ULAŞIN</string>
    <string name="menu_share_app">UYG. PAYLAŞ</string>
    <string name="menu_rate_app">UYG. OYLA</string>

    <string name="shareVia">Uygulamayı Paylaş</string>
    <string name="chooseMapApp">Harita Uygulaması Seçiniz.</string>
    <string name="bottom_share_location">KONUMU PAYLAŞ</string>
    <string name="dialog_direction">YOL TARİFİ</string>
</resources>
